Update GameLogic.java - undid getLast